WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221910
[GPU Process] (REGRESSION
r272776
): Incorrect order for decoding the Pattern repeat properties
https://bugs.webkit.org/show_bug.cgi?id=221910
Summary
[GPU Process] (REGRESSION r272776): Incorrect order for decoding the Pattern ...
Said Abou-Hallawa
Reported
2021-02-15 10:43:15 PST
The order of decoding the repeatX and repeatY properties is reversed.
Attachments
Patch
(1.81 KB, patch)
2021-02-15 10:54 PST
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2021-02-15 10:54:55 PST
Created
attachment 420335
[details]
Patch
EWS
Comment 2
2021-02-15 11:50:38 PST
Committed
r272871
: <
https://commits.webkit.org/r272871
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420335
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-15 11:51:13 PST
<
rdar://problem/74359135
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug