[GPU Process] (REGRESSION r272776): Incorrect order for decoding the Pattern repeat properties https://bugs.webkit.org/show_bug.cgi?id=221910

Reviewed by Simon Fraser.

The order of decoding the repeatX and repeatY properties is reversed.

This is already caught by the GPU bots. Some of the wpt canvas tests have
been failing unexpectedly like 2d.pattern.paint.repeatx.basic.html.

* platform/graphics/Pattern.h:
(WebCore::Pattern::Parameters::decode):


Canonical link: https://commits.webkit.org/234104@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272871 268f45cc-cd09-0410-ab3c-d52691b4dbfc